crates/compiler/src/tests/e2e/good/0578_user_main0_function_name/main.gom
fn main0() -> unit {
    println("user")
}

fn main() -> unit {
    main0()
}
