crates/compiler/src/tests/e2e/bad/0577_extern_go_unsupported/main.gom
extern "go" "time" "Duration" type Duration

fn main() -> unit {
    ()
}
